[gd_scene load_steps=6 format=3 uid="uid://b3m1v7ukjerub"]

[ext_resource type="Script" path="res://Scripts/Enemies/stationary_shooting_enemy.gd" id="1_gje8k"]
[ext_resource type="Texture2D" uid="uid://bwsjfh3sthemg" path="res://1-Bit Platformer Pack/Tiles/Default/tile_0340.png" id="2_ff3k2"]
[ext_resource type="PackedScene" uid="uid://d08a5f4pckurq" path="res://Scenes/Prefabs/Enemies/enemy_bullet.tscn" id="2_vyc4p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atx5v"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_f2l1k"]
radius = 100.0

[node name="StationaryShootingEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 42
script = ExtResource("1_gje8k")
bullet_object = ExtResource("2_vyc4p")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, -8)
texture = ExtResource("2_ff3k2")

[node name="BulletOrigin" type="Node2D" parent="."]
position = Vector2(0, -16)

[node name="EnemyHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_atx5v")

[node name="EnemyDamageHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="EnemyHitbox" type="CollisionShape2D" parent="EnemyDamageHitbox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_atx5v")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="DetectionHitbox" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_f2l1k")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0

[connection signal="area_entered" from="EnemyDamageHitbox" to="." method="_on_enemy_damage_hitbox_area_entered"]
[connection signal="area_exited" from="EnemyDamageHitbox" to="." method="_on_enemy_damage_hitbox_area_exited"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
